--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Controle de Gastos",
   "short_name": "Monyze",
   "description": "Gerencie suas finanças pessoais de forma simples e offline",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#667eea",
